# es2-project

./: .dockerignore  Dockerfile  Dockerfile.macos
backend/: .gitignore  README.md  download_models.sh  entrypoint.sh  main.py  pyproject.toml  requirements.macos.txt  requirements.txt
backend/models/: download_models.sh
backend/stt/: __init__.py  pipeline.py
backend/tts/: __init__.py  piper.py  vits.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts
frontend/src/app/components/chat/: chat.component.html  chat.component.ts
frontend/src/app/components/chatinput/: chat-input.component.html  chat-input.component.spec.ts  chat-input.component.ts
frontend/src/app/components/menu/: menu.component.html  menu.component.ts
frontend/src/app/grid/: grid.component.html  grid.component.ts
frontend/src/app/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/service/: audio.service.ts  bot-config.service.ts  bot.service.ts
frontend/src/app/single/: single.component.html  single.component.ts
frontend/src/assets/: audio-processor.js
