[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "eventlet>=0.39.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-socketio>=5.5.1",
    "llama-cpp-python>=0.3.7",
    "openai-whisper>=20240930",
    "scipy>=1.15.2",
    "transformers>=4.49.0",
]
